Partials for Edit Category done.
Fixes for List Categories / Create Transaction Partials.
Done with Edit Category Partial.

Left to do :
Partial / Modal / Method (is done but not tied to anything yet) for delete transaction.
Search / Filter features.

--- a/MVCBudget.Forser/Views/Home/Index.cshtml
+++ b/MVCBudget.Forser/Views/Home/Index.cshtml
@@ -31,5 +31,14 @@
 </div>
 
 <partial name="_AddCategoryPartial.cshtml" model="new Category()" />
-<partial name="_ListCategoriesPartial.cshtml" />
+<div id="view-categories">
+    <partial name="_ListCategoriesPartial.cshtml" model="Model" />
+</div>
 <partial name="_CreateTransactionPartial.cshtml" model="new Transaction()" />
+<div id="edit-category">
+    <partial name="_EditCategoryPartial.cshtml" model="new Category()" />
+</div>
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+}
