--- a/MVCBudget.Forser/Views/Home/_EditTransactionPartial.cshtml
+++ b/MVCBudget.Forser/Views/Home/_EditTransactionPartial.cshtml
@@ -1,13 +1,17 @@
-﻿@model Transaction
+﻿@model EditTransactionDTO
 
-<div id="CreateTransactionModal" aria-labelledby="CreateTransactionModal" aria-hidden="true" class="modal fade" tabindex="-1">
+@{
+    Layout = null;
+}
+
+<div id="transaction-modal" aria-labelledby="transaction-modal" aria-hidden="true" class="modal fade" tabindex="-1">
     <div class="modal-dialog">
         <div class="modal-content">
-            <form asp-action="CreateTransaction">
+            <form asp-action="EditTransaction" id="update-trans-form" asp-route-id="@Model.Id" onsubmit='return jQueryUpdateTransactionPost(this);'>
                 @Html.AntiForgeryToken()
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="modal-header">
-                    <h3 class="modal-title">Transaction</h3>
+                    <h3 class="modal-title">Edit Transaction : @Model.Name</h3>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -23,20 +27,29 @@
                     </div>
                     <div>
                         <label asp-for="TransferredAmount" class="control-label"></label>
-                        <input asp-format="{0:C}" asp-for="TransferredAmount" class="form-control" />
+                        <span class="input-group-addon">$</span>
+                        <input asp-for="TransferredAmount" asp-format="{0:N2}" class="form-control" />
                         <span asp-validation-for="TransferredAmount" class="text-danger"></span>
                     </div>
                     <div>
                         <label asp-for="TransactionDate" class="control-label"></label>
-                        <input type="date" asp-for="TransactionDate" class="form-control" />
+                        <input type="date" asp-for="TransactionDate" class="form-control" data-date-format="yyyy-mm-dd" />
                         <span asp-validation-for="TransactionDate" class="text-danger"></span>
                     </div>
                     <div>
-                        @await Component.InvokeAsync("CategoriesList")
+                        <div class="form-group">
+                            @if (@Model != null)
+                            {
+                                <label asp-for="@Model.Categories" class="control-label"></label>
+                                <select name="CategoryName" class="form-control" asp-items="Model.Categories">
+                                    <option value="">-- Select an Category --</option>
+                                </select>
+                            }
+                        </div>
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="submit" class="btn btn-primary" id="SaveBtn">Save</button>
+                    <input type="submit" value="Update" class="btn btn-primary btn-block" />
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
                 </div>
             </form>
