--- a/MVCBudget.Forser/Views/Shared/Components/CategoriesList/Default.cshtml
+++ b/MVCBudget.Forser/Views/Shared/Components/CategoriesList/Default.cshtml
@@ -3,6 +3,7 @@
 <div class="form-group">
     @if (Model != null)
     {
+        <label class="control-label">Categories</label>
         <select name="CategoryName" class="form-control" asp-items="@Model">
             <option value="">-- Select an Category --</option>
         </select>
