--- a/MVC.Budget.JsPeanut/MVC.Budget.JsPeanut/Views/Transactions/Index.cshtml
+++ b/MVC.Budget.JsPeanut/MVC.Budget.JsPeanut/Views/Transactions/Index.cshtml
@@ -1,7 +1,4 @@
 ﻿@model MVC.Budget.JsPeanut.Models.ViewModel.TransactionViewModel;
-@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
 @{
     ViewBag.Title = "Index";
 }
@@ -14,22 +11,40 @@
         </svg>
         Go back to categories
     </a>
-    <button type="button" class="btn btn-success dropdown-toggle" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    @*<button type="button" class="btn btn-success dropdown-toggle" id="dropdownMenuButton" width="91.7px" height="38px" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
             <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"></path>
         </svg>
-        Sort
+        Filter by
     </button>
     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-        <a class="dropdown-item" asp-action="Index" asp-route-timeline="Default">Default</a>
-        <a class="dropdown-item" asp-action="Index" asp-route-timeline="Today">Today</a>
-        <a class="dropdown-item" asp-action="Index" asp-route-timeline="Yesterday">Yesterday</a>
-        <a class="dropdown-item" asp-action="Index" asp-route-timeline="AddedOrder">Added order</a>
+        <a class="dropdown-item filterbycategory" asp-action="Index">Category</a>
+        <a class="dropdown-item filterbycategory" asp-action="Index">Date</a>
+    </div>*@
+    <div class="filterandsearch">
+        <form class="search" id="transactionsearch" class="ml-auto" style="display: flex;" asp-action="Index" asp-route-searchstringforname="@Model.SearchStringForName" asp-route-filterbycategorystring="@Model.FilterByCategoryString" asp-route-filterbydatestring="@Model.FilterByDateString">
+            <div>
+                <input type="text" id="searchInput" style="margin: 1em 0 1em 0;" asp-for="SearchStringForName" />
+                <input type="submit" id="submit" class="btn btn-outline-success" value="Search" />
+                <br />
+                <small class="form-text text-muted">Search by name</small>
+            </div>
+            <div>
+                <input type="text" style="margin: 1em 0 1em 0;" asp-for="FilterByCategoryString" />
+                <input type="submit" id="submit" class="btn btn-outline-success" value="Filter" />
+                <br />
+                <small class="form-text text-muted">Filter by category</small>
+            </div>
+            <div>
+                <input type="date" style="margin: 1em 0 1em 0;" asp-for="FilterByDateString" />
+                <input type="submit" id="submit" class="btn btn-outline-success" value="Filter" />
+                <br />
+                <small class="form-text text-muted">Filter by date</small>
+            </div>
+        </form>
     </div>
-    <form class="search" class="ml-auto">
-        <p style="margin: 1em 0 1em 0;"> Title: <input type="text" id="searchInput" asp-for="SearchString" /> <input type="submit" value="Filter" /> </p>
-    </form>
 </div>
+
 <br />
 @{
     if (ViewBag.Category == null)
@@ -43,34 +58,37 @@
     }
 }
 <br />
-<table id="records" class="table">
+<table id="transactionrecords" class="table">
     <thead>
         <tr>
             <th>Category</th>
             <th>Date</th>
             <th>Name</th>
+            <th>Currency</th>
             <th>Value</th>
+            <th>Description</th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-    @{
-        foreach (var transaction in Model.Transactions)
-        {   
-            <tr class="list-row">
+        @{
+            foreach (var transaction in Model.Transactions)
+            {   
+                <tr class="list-row">
                 <td>@Model.Categories.Where(x => x.Id == transaction.CategoryId).First().Name</td>
                 <td>@transaction.Date</td>
                 <td>@transaction.Name</td>
+                <td>@transaction.CurrencyCode</td>
                 <td>@transaction.Value</td>
+                <td class="break-word">@transaction.Description</td>
                 <td>
-                    <a button type="button" class="btn btn-danger" data-toggle="modal" data-target="#deleteModal" onclick="showDeleteModal()">
+                    <a type="button" class="btn btn-danger" data-toggle="modal" data-target="#deleteModal_@transaction.Id" onclick="showDeleteModal(@transaction.Id)">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
                             <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z" />
                             <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z" />
                         </svg>
                     </a>
-
-                        <a button type="button" class="btn btn-primary" data-toggle="modal" data-target="#updateModal" onclick="showUpdateModal()">
+                    <a type="button" class="btn btn-primary" data-toggle="modal" data-target="#updateModal_@transaction.Id" onclick="showUpdateModal(@transaction.Id)">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pen" viewBox="0 0 16 16">
                                 <path d="m13.498.795.149-.149a1.207 1.207 0 1 1 1.707 1.708l-.149.148a1.5 1.5 0 0 1-.059 2.059L4.854 14.854a.5.5 0 0 1-.233.131l-4 1a.5.5 0 0 1-.606-.606l1-4a.5.5 0 0 1 .131-.232l9.642-9.642a.5.5 0 0 0-.642.056L6.854 4.854a.5.5 0 1 1-.708-.708L9.44.854A1.5 1.5 0 0 1 11.5.796a1.5 1.5 0 0 1 1.998-.001zm-.644.766a.5.5 0 0 0-.707 0L1.95 11.756l-.764 3.057 3.057-.764L14.44 3.854a.5.5 0 0 0 0-.708l-1.585-1.585z" />
@@ -79,7 +97,7 @@
                     </a>
                 </td>
 
-                <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog">
+                <div class="modal fade" id="deleteModal_@transaction.Id" tabindex="-1" role="dialog">
                     <div class="modal-dialog" role="document">
                         <div class="modal-content">
                             <div class="modal-header">
@@ -101,7 +119,7 @@
                     </div>
                 </div>
 
-                <div class="modal fade" id="updateModal" tabindex="-1" role="dialog" aria-labelledby="updateModalLabel" aria-hidden="true">
+                <div class="modal fade" id="updateModal_@transaction.Id" tabindex="-1" role="dialog" aria-labelledby="updateModalLabel" aria-hidden="true">
                     <div class="modal-dialog" role="document">
                         <div class="modal-content">
                             <div class="modal-header">
@@ -112,21 +130,44 @@
                             </div>
                             <div class="modal-body">
                                 <form asp-action="UpdateTransaction" method="post">
-                                    <input type="hidden" asp-for="@transaction.Id" value="@transaction.Id">
-                                    <label>Date</label>
-                                    <input type="datetime-local" placeholder="Date" asp-for="Transaction.Date">
-                                    <br />
-                                    <label>Name</label>
-                                    <input type="text" placeholder="Name" asp-for="Transaction.Name">
-                                    <br />
-                                    <label>Category</label>
-                                    <select asp-for="Transaction.CategoryId" asp-items="Model.CategorySelectList"></select>
-                                    <br />
-                                    <label>Value</label>
-                                    <input type="number" placeholder="Value" asp-for="Transaction.Value">
-                                    <br />
-                                    <label>Currency</label>
-                                    <select asp-for="CurrencyObjectJson" asp-items="Model.CurrencySelectList"></select>
+                                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                                    <div class="form-group">
+                                        <label style="margin-top: 10px; margin-bottom: 20px;">Date</label>
+                                        <input type="datetime-local" placeholder="Date" asp-for="Transaction.Date">
+                                        <span asp-validation-for="Transaction.Date" class="text-danger"></span>
+                                        <br />
+                                        <label style ="margin-top: 10px; margin-bottom: 20px;">Name</label>
+                                        <input type="text" placeholder="Name" asp-for="Transaction.Name">
+                                        <span asp-validation-for="Transaction.Name" class="text-danger"></span>
+                                        <br />
+                                            <label style="margin-top: 10px; margin-bottom: 20px;">Category</label>
+                                        @{
+                                            var categories = Model.Categories;
+                                            <select id="selectCategory" asp-for="Transaction.CategoryId">
+                                                {
+                                                <option value="@categories.Where(x => x.Id == transaction.CategoryId).First().Id" selected>@categories.Where(x => x.Id == transaction.CategoryId).First().Name</option>
+                                                @foreach (var item in Model.CategorySelectList.Where(x => x.Text != categories.Where(x => x.Id == transaction.CategoryId).First().Name))
+                                                {
+                                                    <option value="@item.Value">@item.Text</option>
+                                                }
+                                                }
+                                            </select>
+                                        }
+                                        <br />
+                                        <label style="margin-top: 10px; margin-bottom: 20px;">Value</label>
+                                        <input type="decimal" placeholder="Value" asp-for="Transaction.Value">
+                                        <span asp-validation-for="Transaction.Value" class="text-danger"></span>
+                                        <br />
+                                        <small id="valueHelp" class="form-text text-muted">If you are going to insert a decimal, use a dot as separator</small>
+                                        <br>
+                                        <label style="margin-top: 10px; margin-bottom: 20px;">Description</label>
+                                        <input type="text" placeholder="Description" asp-for="Transaction.Description"/>
+                                        <span asp-validation-for="Transaction.Description" class="text-danger"></span>
+                                        <br />
+                                        <label style="margin-top: 10px; margin-bottom: 20px;">Currency</label>
+                                        <select asp-for="CurrencyObjectJson" asp-items="Model.CurrencySelectList"></select>
+                                        <input type="hidden" asp-for="Transaction.Id" value="@transaction.Id">
+                                    </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                                         <button type="submit" class="btn btn-primary">Save changes</button>
@@ -143,14 +184,18 @@
 </table>
 
 @section Scripts{
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
     <script>
+        
 
-        function showDeleteModal() {
-            $('#deleteModal').modal('show');
+        function showDeleteModal(transactionid) {
+            $(`#deleteModal_${transactionid}`).modal('show');
         }
 
-        function showUpdateModal() {
-            $('#updateModal').modal('show');
+        function showUpdateModal(transactionid) {
+            $(`#updateModal_${transactionid}`).modal('show');
         }
     </script>
 }
