--- a/MVCBudget.Forser/Views/Home/_TransactionListPartial.cshtml
+++ b/MVCBudget.Forser/Views/Home/_TransactionListPartial.cshtml
@@ -8,7 +8,7 @@
 {
     @foreach (var transaction in Model.Transactions)
     {
-        <tr>
+        <tr class="table-row">
             <td>
                 @transaction.Name
             </td>
