--- a/MVCBudget.Forser/Views/Shared/_Layout.cshtml
+++ b/MVCBudget.Forser/Views/Shared/_Layout.cshtml
@@ -16,6 +16,10 @@
                     <button type="button" id="btn-confirm" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#AddCategoryModal">New Category</button>
                     <button type="button" id="btn-confirm" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#ListCategoriesModal">List Categories</button>
                     <button type="button" id="btn-confirm" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#CreateTransactionModal">New Transaction</button>
+                    <div class="input-group">
+                    <span class="input-group-text"><i class="bi bi-binoculars"></i></span>
+                    <input type="text" class="form-control" placeholder="Search for Transaction" aria-label="Search" id="SearchField" />
+                </div>
                 </div>
             </div>
         </header>
