--- a/MVCBudget.Forser/Views/Home/_FilterFormPartial.cshtml
+++ b/MVCBudget.Forser/Views/Home/_FilterFormPartial.cshtml
@@ -11,7 +11,7 @@
             <input type="date" asp-for="StartDate" id="StartDate" class="form-control" data-date-format="yyyy-mm-dd" />
             <span asp-validation-for="StartDate" class="text-danger"></span>
         </div>
-        <div class="form-group">
+        <div class="form-group pb-2">
             <label asp-for="EndDate" class="control-label"></label>
             <input type="date" asp-for="EndDate" id="EndDate" class="form-control" data-date-format="yyyy-mm-dd" />
             <span asp-validation-for="EndDate" class="text-danger"></span>
