--- a/MVCBudget.Forser/Views/Shared/_Layout.cshtml
+++ b/MVCBudget.Forser/Views/Shared/_Layout.cshtml
@@ -10,18 +10,26 @@
     </head>
     <body>
         <header>
-            <div class="navbar-light bg-white border-bottom box-shadow mb-3 p-2">
-                <div class="container container-fluid">
-                    <a class="navbar-brand fs-3 fw-bold" asp-controller="Home" asp-action="Index"><i class="bi bi-coin"></i> Budget Application</a>
-                    <button type="button" id="btn-confirm" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#AddCategoryModal">New Category</button>
-                    <button type="button" id="btn-confirm" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#ListCategoriesModal">List Categories</button>
-                    <button type="button" id="btn-confirm" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#CreateTransactionModal">New Transaction</button>
-                    <div class="input-group">
-                    <span class="input-group-text"><i class="bi bi-binoculars"></i></span>
-                    <input type="text" class="form-control" placeholder="Search for Transaction" aria-label="Search" id="SearchField" />
-                </div>
-                </div>
-            </div>
+             <nav class="navbar navbar-expand-lg flex-lg-nowrap flex-wrap">
+                <div class="container-fluid">
+                    <a class="navbar-brand abs fs-3 fw-bold" asp-controller="Home" asp-action="Index"><i class="bi bi-coin"></i> Budget Application</a>
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item active pe-4">
+                            <div class="btn-group">
+                                <button type="button" id="btn-confirm" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#AddCategoryModal">New Category</button>
+                                <button type="button" id="btn-confirm" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#ListCategoriesModal">List Categories</button>
+                                <button type="button" id="btn-confirm" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#CreateTransactionModal">New Transaction</button>
+                            </div>
+                        </li>
+                        <li class="nav-item">
+                            <form class="d-flex w-100" role="search">
+                                <input type="text" class="form-control" placeholder="Search for Transaction" aria-label="Search" id="SearchField" />
+                                <button class="btn btn-outline-success" type="submit">Search</button>
+                            </form>
+                        </li>
+                    </ul>
+                 </div>
+            </nav>
         </header>
         <div class="container">
             <main role="main" class="pb-3">
