Fixed another issue with Filter
Fixed so Filter remembers which Category you selected upon filtering.

--- a/MVCBudget.Forser/Views/Home/Index.cshtml
+++ b/MVCBudget.Forser/Views/Home/Index.cshtml
@@ -5,6 +5,9 @@
 }
 
 <div id="filterForm">
+    @{
+        ViewData["CategoryId"] = Model.ViewFilter.CategoryId;
+    }
     @await Html.PartialAsync("~/Views/Home/_FilterFormPartial.cshtml", new FilterModel())
 </div>
 
