--- a/MVCBudget.Forser/Views/Home/_FilterFormPartial.cshtml
+++ b/MVCBudget.Forser/Views/Home/_FilterFormPartial.cshtml
@@ -4,7 +4,7 @@
     <div class="container">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="form-group">
-            @await Component.InvokeAsync("CategoriesList")
+            @await Component.InvokeAsync("CategoriesList", ViewData["CategoryId"])
         </div>
         <div class="form-group">
             <label asp-for="StartDate" class="control-label"></label>
