--- a/Budget.Furiax/Budget/Views/Home/Index.cshtml
+++ b/Budget.Furiax/Budget/Views/Home/Index.cshtml
@@ -1,43 +1,27 @@
-﻿@{
-    ViewData["Title"] = "Budget App";
-}
+﻿<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>To-do CRUD</title>
+    <link rel="stylesheet" href="css/site.css" />
+</head>
+<body>
+    <h1 class="display-4 text-center">Budget App</h1>
 
-<div class="text-center">
-    <h1 class="display-4">Budget App</h1>
-</div>
-<div class="container">
-    <div class="row">
-        <div class="col-md-6 text-center mt-3">
-            <button>Manage Transactions</button>
-        </div>
-        <div class="col-md-6 text-center mt-3">
-            <button>Manage Categories</button>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 text-center mt-3">
+                <button class="btn-outline-success">Add Transaction</button>
+            </div>
+            <div class="col-md-6 text-center mt-3">
+                <button class="btn-outline-success">Add Category</button>
+            </div>
         </div>
     </div>
-</div>
-<table class="table">
-    <thead>
-        <tr>
-            <th>ID</th>
-            <th>Date</th>
-            <th>From/To</th>
-            <th>Amount</th>
-            <th>Options</th>
-        </tr>
-    </thead>
-@*     <tbody>
-        @if (Model != null)
-        {
-            foreach(var transaction in Model)
-            {
-                <tr>
-                    <td>@Html.DisplayFor(model => TransactionModel.TransactionId)</td>
-                    <td>@Html.DisplayFor(model => TransactionModel.TransactionDate)</td>
-                    <td>@Html.DisplayFor(model => TransactionModel.TransactionSource)</td>
-                    <td>@Html.DisplayFor(model => TransactionModel.TransactionAmount)</td>
-                    <td><a class="update" data-toggle="modal" href="#updateModal"></a></td>
-                </tr>
-            }
-        }
-    </tbody> *@
-</table>
+    <div id="transactionList"></div>
+
+    <script src="js/site.js" asp-append-version="true"></script>
+    <script type="text/javascript">getTransactions();</script>
+</body>
+</html>
+
