--- a/Budget.Furiax/Budget/Views/Home/Index.cshtml
+++ b/Budget.Furiax/Budget/Views/Home/Index.cshtml
@@ -23,18 +23,21 @@
         <input type ="date" id="add-date"><br />
         <input type ="text" id="add-source" placeholder="To/From">
         <input type ="text" id="add-amount" placeholder="amount"><br />
-        <input type ="number" id="add-categoryId">
+        <select id="add-selectedcategory" required> </select>
         <input type ="submit" value="Add">
     </form>
     <form action="javascript:void(0);" method="POST" onsubmit="addCategory()">
         Add Category:<br>
-        <input type="text" id="add-category" placeholder="Name">
+        <input type="text" id="add-categoryname" placeholder="Name">
         <input type="submit" value="Add">
     </form>
     <div id="transactionList"></div>
 
     <script src="js/site.js" asp-append-version="true"></script>
-    <script type="text/javascript">getTransactions();</script>
+    <script type="text/javascript">
+        populateCategoriesDropMenu();
+        getTransactions();
+        </script>
 </body>
 </html>
 
