fixed some issues records weren't displayed + added some styling to the table

--- a/Budget.Furiax/Budget/Views/Home/Index.cshtml
+++ b/Budget.Furiax/Budget/Views/Home/Index.cshtml
@@ -31,10 +31,10 @@
         <input type="text" id="add-categoryname" placeholder="Name">
         <input type="submit" value="Add">
     </form>
-    <table id="transactionList">
+    <table id="transactionList" class="mt-3" >
         <thead>
             <tr>
-                <th>Transaction ID</th>
+                <th>ID</th>
                 <th>Date</th>
                 <th>Source</th>
                 <th>Amount</th>
