--- a/Budget.Furiax/Budget/wwwroot/css/site.css
+++ b/Budget.Furiax/Budget/wwwroot/css/site.css
@@ -34,3 +34,81 @@ body {
     #transactionList th {
         background-color: #f2f2f2; /* Optional: Add a background color to header cells */
     }
+
+/* The Category Modal (background) */
+#categoryModal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+    /* Category Modal Content/Box */
+    #categoryModal .modal-content {
+        background-color: #fefefe;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        padding: 20px;
+        border: 1px solid #888;
+        width: 80%;
+        max-width: 300px; /* Adjust as needed */
+    }
+
+/* Close Button */
+#closeModalCategory {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+    #closeModalCategory:hover {
+        color: darkred;
+    }
+
+/* The Transaction Modal (background) */
+#transactionModal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+    /* Transaction Modal Content/Box */
+    #transactionModal .modal-content {
+        background-color: #fefefe;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        padding: 20px;
+        border: 1px solid #888;
+        width: 80%;
+        max-width: 400px; /* Adjust as needed */
+    }
+
+/* Close Button */
+#closeModalTransaction {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+    #closeModalTransaction:hover {
+        color: black;
+    }
