displayTransactions function now also displays the Category name

--- a/Budget.Furiax/Budget/Views/Home/Index.cshtml
+++ b/Budget.Furiax/Budget/Views/Home/Index.cshtml
@@ -26,6 +26,7 @@
                 <th>Date</th>
                 <th>Name</th>
                 <th>Amount</th>
+                <th>Category</th>
             </tr>
         </thead>
         <tbody></tbody>
