--- a/Budget.Furiax/Budget/wwwroot/css/site.css
+++ b/Budget.Furiax/Budget/wwwroot/css/site.css
@@ -27,12 +27,12 @@ body {
 
     #transactionList th, #transactionList td {
         padding: 5px; 
-        text-align: left; 
+        text-align: center; 
         border: 1px solid #dddddd;
     }
 
     #transactionList th {
-        background-color: #f2f2f2; /* Optional: Add a background color to header cells */
+        background-color: #f2f2f2;
     }
 
 /* The Category Modal (background) */
