added some validation to editTransaction function

--- a/Budget.Furiax/Budget/Views/Home/Index.cshtml
+++ b/Budget.Furiax/Budget/Views/Home/Index.cshtml
@@ -59,6 +59,7 @@
                 Amount: <input type="text" id="edit-amount" ><br />
                 Category: <select id="edit-selectedcategory" required> </select>
                 <input type="submit" value="Save Changes">
+                <div id="error-message-edit" style="color:red; display: none;"></div>
             </form>
         </div>
     </div>
