added total balance

--- a/Budget.Furiax/Budget/Views/Home/Index.cshtml
+++ b/Budget.Furiax/Budget/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
             </div>
         </div>
     </div>
-   
+    <div id="balance">Total balance: <span id="balanceTotal"></span></div>
     <table id="transactionList" class="mt-3" >
         <thead>
             <tr>
