--- a/Budget.Furiax/Budget/wwwroot/css/site.css
+++ b/Budget.Furiax/Budget/wwwroot/css/site.css
@@ -137,3 +137,9 @@ body {
         width: 80%;
         max-width: 400px; /* Adjust as needed */
     }
+#balance {
+    border: 2px solid black;
+    padding: 5px;
+    font-weight: bold;
+    text-align: right;
+}
