--- a/Budget.Furiax/Budget/Views/Home/Index.cshtml
+++ b/Budget.Furiax/Budget/Views/Home/Index.cshtml
@@ -18,6 +18,9 @@
             </div>
         </div>
     </div>
+    <div><input type="text" id="searchTransactionName" placeholder="Search transactions" />
+        <button onclick="searchOnTransactionName()">Search</button>
+    </div>
     <div id="balance">Total balance: <span id="balanceTotal"></span></div>
     <table id="transactionList" class="mt-3" >
         <thead>
