sorted the functions in my js file

--- a/Budget.Furiax/Budget/Views/Home/Index.cshtml
+++ b/Budget.Furiax/Budget/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
             </div>
         </div>
     </div>
-    <div><input type="text" id="searchTransactionName" placeholder="Search transactions" />
+    <div><input type="text" id="searchTransactionName" placeholder="Search transaction name" />
         <button onclick="searchOnTransactionName()">Search</button>
     </div>
     <div id="balance">Total balance: <span id="balanceTotal"></span></div>
