- implemented sort on category and sort on date functions - removed all console logs that were used for debugging

--- a/Budget.Furiax/Budget/Views/Home/Index.cshtml
+++ b/Budget.Furiax/Budget/Views/Home/Index.cshtml
@@ -20,6 +20,8 @@
     </div>
     <div><input type="text" id="searchTransactionName" placeholder="Search transaction name" />
         <button onclick="searchOnTransactionName()">Search</button>
+        <button onclick="sortOnCategory()">Sort on Category</button>
+        <button onclick="sortOnDate()">Sort on Date</button>
     </div>
     <div id="balance">Total balance: <span id="balanceTotal"></span></div>
     <table id="transactionList" class="mt-3" >
